@@ -23,6 +23,7 @@ class WC_Stripe_Payment_Methods {
 	const SEPA_DEBIT        = 'sepa_debit';
 	const SOFORT            = 'sofort';
 	const WECHAT_PAY        = 'wechat_pay';
+	const CARD_PRESENT      = 'card_present';
 
 	/**
 	 * Payment methods that are considered as voucher payment methods.
